# mixs-subset-examples-first

./: .cruft.json  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  presentation.md  project.Makefile  pyproject.toml  sitemap.xml
ASSEMBLYQUALENUM/: index.html
Agriculture/: index.html
Air/: index.html
BIOTICRELATIONSHIPENUM/: index.html
Biosample/: index.html
BiosampleCollection/: index.html
Boolean/: index.html
BuiltEnvironment/: index.html
CURLANDUSEENUM/: index.html
Checklist/: index.html
Curie/: index.html
DRAINAGECLASSENUM/: index.html
Database/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EnvironmentalPackage/: index.html
FAOCLASSENUM/: index.html
Float/: index.html
FoodAnimalAndAnimalFeed/: index.html
FoodFarmEnvironment/: index.html
FoodFoodProductionFacility/: index.html
FoodHumanFoods/: index.html
Food_Product_type/: index.html
Food_source/: index.html
HACCP_term/: index.html
HostAssociated/: index.html
HumanAssociated/: index.html
HumanGut/: index.html
HumanOral/: index.html
HumanSkin/: index.html
HumanVaginal/: index.html
HydrocarbonResourcesCores/: index.html
HydrocarbonResourcesFluidsSwabs/: index.html
IFSAC_category/: index.html
Integer/: index.html
LIBLAYOUTENUM/: index.html
MIxS/: index.html
MicrobialMatBiofilm/: index.html
MigsBa/: index.html
MigsBaPlantAssociated/: index.html
MigsBaSediment/: index.html
MigsBaSoil/: index.html
MigsBaWater/: index.html
MigsEu/: index.html
MigsOrg/: index.html
MigsPl/: index.html
MigsVi/: index.html
Mimag/: index.html
MimarksC/: index.html
MimarksS/: index.html
Mims/: index.html
MimsPlantAssociated/: index.html
MimsSediment/: index.html
MimsSoil/: index.html
MimsWater/: index.html
Misag/: index.html
MiscellaneousNaturalOrArtificialEnvironment/: index.html
Miuvig/: index.html
NEGCONTTYPEENUM/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
OXYSTATSAMPENUM/: index.html
Objectidentifier/: index.html
PROFILEPOSITIONENUM/: index.html
PersonStatus/: index.html
PlantAssociated/: index.html
RELTOOXYGENENUM/: index.html
SOILHORIZONENUM/: index.html
Sediment/: index.html
Soil/: index.html
String/: index.html
SymbiontAssociated/: index.html
TIDALSTAGEENUM/: index.html
TILLAGEENUM/: index.html
TROPHICLEVELENUM/: index.html
Time/: index.html
UnknownTerm/: index.html
Uri/: index.html
Uriorcurie/: index.html
WastewaterSludge/: index.html
Water/: index.html
about/: index.html
abs_air_humidity/: index.html
adapters/: index.html
add_recov_method/: index.html
additional_info/: index.html
address/: index.html
adj_room/: index.html
adjacent_environment/: index.html
aero_struc/: index.html
age_in_years/: index.html
agriculture_set/: index.html
agrochem_addition/: index.html
air_PM_concen/: index.html
air_flow_impede/: index.html
air_particulate_matter_concentration/: index.html
air_pm_concen/: index.html
air_set/: index.html
air_temp/: index.html
air_temp_regm/: index.html
al_sat/: index.html
al_sat_meth/: index.html
alkalinity/: index.html
alkalinity_method/: index.html
alkyl_diethers/: index.html
alt/: index.html
aminopept_act/: index.html
ammonium/: index.html
amniotic_fluid_color/: index.html
amount_light/: index.html
ances_data/: index.html
anim_water_method/: index.html
animal_am/: index.html
animal_am_dur/: index.html
animal_am_freq/: index.html
animal_am_route/: index.html
animal_am_use/: index.html
animal_body_cond/: index.html
animal_diet/: index.html
animal_feed_equip/: index.html
animal_group_size/: index.html
animal_housing/: index.html
animal_intrusion/: index.html
animal_sex/: index.html
annot/: index.html
annual_precpt/: index.html
annual_temp/: index.html
antibiotic_regm/: index.html
api/: index.html
arch_struc/: index.html
area_samp_size/: index.html
aromatics_pc/: index.html
asphaltenes_pc/: index.html
assembly_name/: index.html
assembly_qual/: index.html
assembly_quality/: index.html
assembly_software/: index.html
assets/: drop_then_remove_dupes.out  mixs_combined_diff.html  mixs_combined_filtered_modified.tsv  mixs_conflicting_terms.tsv  mixs_uniform_terms.tsv  mixs_v6_MIxS_managed_keys.tsv  mixs_v6_environmental_packages_managed_keys.tsv  mixs_v6_environmental_packages_managed_keys_filtered.tsv  post_col_diff_report.out  pre_col_diff_report.out  report_pre_id_item_multi_pairings.out  report_pre_id_scn_multi_pairings.out  report_pre_sc_item_multi_pairings.out
associated_resource/: index.html
association_duration/: index.html
atmospheric_data/: index.html
avg_dew_point/: index.html
avg_occup/: index.html
avg_temp/: index.html
bac_prod/: index.html
bac_resp/: index.html
bacteria_carb_prod/: index.html
bacterial_density/: index.html
barometric_press/: index.html
basin/: index.html
bathroom_count/: index.html
bedroom_count/: index.html
benzene/: index.html
bin_param/: index.html
bin_software/: index.html
biochem_oxygen_dem/: index.html
biocide/: index.html
biocide_admin_method/: index.html
biocide_used/: index.html
biol_stat/: index.html
biomass/: index.html
biotic_regm/: index.html
biotic_relationship/: index.html
birth_control/: index.html
birth_date/: index.html
bishomohopanol/: index.html
blood_blood_disord/: index.html
blood_press_diast/: index.html
blood_press_syst/: index.html
bromide/: index.html
build_docs/: index.html
build_occup_type/: index.html
building_setting/: index.html
built_environment_set/: index.html
built_struc_age/: index.html
built_struc_set/: index.html
built_struc_type/: index.html
data/: enums.tsv  (+24 more)
(+852 files in other folders)
